// Vitest Snapshot v1

exports[`Form > matches snapshot 1`] = `
<div>
  <form
    class="sveltejs-forms"
  >
    <div
      class="field"
    >
       
      <input
        id="user.email"
        name="user.email"
        placeholder="Email"
        type="text"
      />
       
    </div>
    <!--&lt;Input&gt;-->
     
    <div
      class="field"
    >
       
      <select
        id="language"
        name="language"
      >
        <option
          value=""
        />
        <option
          value="svelte"
        >
          Svelte
           
        </option>
        <option
          value="react"
        >
          React
           
        </option>
        <option
          value="angular"
        >
          Angular
           
        </option>
      </select>
       
    </div>
    <!--&lt;Select&gt;-->
     
    <div
      class="field"
    >
      <input
        id="os-macos"
        name="os"
        type="checkbox"
        value="macos"
      />
       
      <label
        for="macos"
      >
        macOS
      </label>
      
      <input
        id="os-linux"
        name="os"
        type="checkbox"
        value="linux"
      />
       
      <label
        for="linux"
      >
        Linux 🐧
      </label>
      
      <input
        id="os-windows"
        name="os"
        type="checkbox"
        value="windows"
      />
       
      <label
        for="windows"
      >
        Windows
      </label>
      
       
    </div>
    <!--&lt;Choice&gt;-->
     
    <button
      type="submit"
    >
      Sign in
    </button>
  </form>
  <!--&lt;Form&gt;-->
  <!--&lt;TestApp&gt;-->
</div>
`;

exports[`Form > shows error message when schema is defined 1`] = `
<div>
  <form
    class="sveltejs-forms"
  >
    <div
      class="field error"
    >
       
      <input
        id="user.email"
        name="user.email"
        placeholder="Email"
        type="text"
      />
       
      <div
        class="message"
      >
        user.email must be a valid email
      </div>
    </div>
    <!--&lt;Input&gt;-->
     
    <div
      class="field"
    >
       
      <select
        id="language"
        name="language"
      >
        <option
          value=""
        />
        <option
          value="svelte"
        >
          Svelte
           
        </option>
        <option
          value="react"
        >
          React
           
        </option>
        <option
          value="angular"
        >
          Angular
           
        </option>
      </select>
       
    </div>
    <!--&lt;Select&gt;-->
     
    <div
      class="field"
    >
      <input
        id="os-macos"
        name="os"
        type="checkbox"
        value="macos"
      />
       
      <label
        for="macos"
      >
        macOS
      </label>
      
      <input
        id="os-linux"
        name="os"
        type="checkbox"
        value="linux"
      />
       
      <label
        for="linux"
      >
        Linux 🐧
      </label>
      
      <input
        id="os-windows"
        name="os"
        type="checkbox"
        value="windows"
      />
       
      <label
        for="windows"
      >
        Windows
      </label>
      
       
    </div>
    <!--&lt;Choice&gt;-->
     
    <button
      type="submit"
    >
      Sign in
    </button>
  </form>
  <!--&lt;Form&gt;-->
  <!--&lt;TestApp&gt;-->
</div>
`;
